<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_primary"
    android:padding="16dp">

    <!-- Top bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/chapterReaderTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/md_theme_background_mediumContrast"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/chapterReaderButton"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/chapterReaderButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/download"
            android:src="@drawable/download"
            app:tint="@color/md_theme_primaryContainer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Scrollable text -->
    <ScrollView
        android:id="@+id/textScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/scrollview_border"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/chapterReaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_onBackground"
            android:textSize="15sp" />
    </ScrollView>


<!--   Media controls  -->
    <LinearLayout
        android:id="@+id/mediaControls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/md_theme_primary"
        >

        <!-- Progress bar showing progress by line -->
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/chapterProgressBar"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            app:trackColor="?attr/colorSurfaceVariant"
            app:indicatorColor="@color/md_theme_error"
            app:trackThickness="10dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"/>

        <!-- Controls row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:background="@color/md_theme_primary"
            android:weightSum="3">

            <ImageButton
                android:id="@+id/prevLineButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:contentDescription="@string/previous_line"
                android:background="@drawable/button_squircle_outline"
                android:src="@drawable/previous"
                app:tint="@color/md_theme_primaryContainer" />

            <ImageButton
                android:id="@+id/playPauseButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:contentDescription="@string/play_pause"
                android:background="@drawable/button_squircle_outline"
                android:src="@drawable/play_button_arrowhead"
                app:tint="@color/md_theme_primaryContainer" />

            <ImageButton
                android:id="@+id/nextLineButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:contentDescription="@string/next_line"
                android:background="@drawable/button_squircle_outline"
                android:src="@drawable/next"
                app:tint="@color/md_theme_primaryContainer" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
